# pyproject.toml for the `indent_managers` package

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "indent-managers"
version = "0.1.0"
description = "Simple context managers for indentation-aware printing and logging"
readme = "README.md"
requires-python = ">=3.7"
authors = [
  { name = "Your Name", email = "you@example.com" }
]
license = { text = "MIT" }

dependencies = [
  # No external runtime dependencies
]

[project.urls]
Homepage = "https://github.com/yourusername/indent-managers"

[tool.setuptools]
packages = { find = { where = ["src"] } }

[tool.setuptools.packages.find]
where = ["src"]
include = ["indent_managers*"]
